// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component render table when there is data excpet subHeaders 1`] = `
<table
  className="table"
>
  <thead
    className="body_b_16"
  >
    <tr>
      <th
        className="th"
      >
        A
      </th>
      <th
        className="th"
      >
        B
      </th>
      <th
        className="th"
      >
        C
      </th>
    </tr>
  </thead>
  <tbody
    className={null}
  >
    <tr
      className="tr body_r_18"
    >
      <td
        className="td"
      >
        <div>
          1
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          2
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          3
        </div>
      </td>
    </tr>
    <tr
      className="tr body_r_18"
    >
      <td
        className="td"
      >
        <div>
          4
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          5
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          6
        </div>
      </td>
    </tr>
    <tr
      className="tr body_r_18"
    >
      <td
        className="td"
      >
        <div>
          7
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          8
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          9
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Component render table when there is data include subHeaders 1`] = `
<table
  className="table"
>
  <thead
    className="body_b_16"
  >
    <tr>
      <th
        className="th"
        rowSpan={2}
      >
        a
      </th>
      <th
        className="th"
        colSpan={2}
      >
        b
      </th>
      <th
        className="th"
        colSpan={2}
      >
        c
      </th>
    </tr>
    <tr>
      <td>
        d
      </td>
      <td>
        e
      </td>
      <td>
        f
      </td>
      <td>
        g
      </td>
    </tr>
  </thead>
  <tbody
    className={null}
  >
    <tr
      className="tr body_r_18"
    >
      <td
        className="td"
      >
        <div>
          1
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          2
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          3
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          4
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          5
        </div>
      </td>
    </tr>
    <tr
      className="tr body_r_18"
    >
      <td
        className="td"
      >
        <div>
          6
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          7
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          8
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          9
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          10
        </div>
      </td>
    </tr>
    <tr
      className="tr body_r_18"
    >
      <td
        className="td"
      >
        <div>
          11
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          12
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          13
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          14
        </div>
      </td>
      <td
        className="td"
      >
        <div>
          15
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
